# crewai_mas_demo_m2l7

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
deploy/docker/: Dockerfile
deploy/grafana/: dashboard.json
deploy/k8s/: configmap.example.yaml  deployment.yaml
doc/: Python AI 应用框架设计文档.md  课程大纲.md  课程逐字稿.md
doc/analysis/: 项目分析报告.md
doc/design/: .gitkeep  小红书爆款笔记项目设计文档.md
src/app/: __init__.py  __main__.py  main.py
src/app/api/: __init__.py  dependencies.py
src/app/api/v1/: __init__.py  health.py  xhs_note.py
src/app/core/: __init__.py  config.py  image_utils.py  security.py
src/app/crews/: __init__.py
src/app/crews/config/: agents.yaml  tasks.yaml
src/app/crews/llm/: __init__.py  aliyun_llm.py
src/app/crews/tools/: __init__.py  add_image_tool_local.py  intermediate_tool.py
src/app/crews/xhs_note/: __init__.py  agents.py  flows.py  tasks.py
src/app/db/: __init__.py
src/app/db/clients/: __init__.py  file_client.py  oceanbase_client.py
src/app/db/migrations/: env.py
src/app/db/models/: __init__.py  base.py
src/app/db/repositories/: __init__.py
src/app/observability/: __init__.py  http_trace.py  logging.py  metrics.py  trace.py
src/app/schemas/: __init__.py  common.py  xhs_note.py
src/app/services/: __init__.py  xhs_note_service.py
tests/: conftest.py
tests/integration/: test_api_health.py  test_xhs_note.py  xhs_note_curl.sh
tests/unit/: test_api.py  test_config.py  test_crews.py  test_db.py  test_flows.py  test_image_utils.py  test_llm.py  test_observability.py  test_schemas.py  test_security.py  test_service.py  test_tools.py  test_trace.py
